[#ITEM RELEASE] fix font issue on ie

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,5 @@
 @import "app-bundle";
 
 body, button, input, optgroup, select, textarea {
-  font-family: PingFang TC, Helvetica, Arial, sans-serif, Microsoft JhengHei !important;
+  font-family: PingFang TC, Microsoft JhengHei, Helvetica, Arial, sans-serif !important;
 }
